<resources>
    <string name="app_name">Peepl</string>
    <string name="name">Nom :</string>
    <string name="surname">Prénom :</string>
    <string name="age">Age :</string>
    <string name="years">an(s)</string>
    <string name="male">Masculin</string>
    <string name="female">Féminin</string>
    <string name="sex">Sexe :</string>
    <string name="add">Ajouter</string>
    <string name="search">Rechercher</string>
    <string name="save">Enregistrer</string>
    <string name="close">Fermer</string>
    <string name="edit">Modifier</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="delete_confirm">Voulez-vous supprimer cette personne?</string>
    <string name="age_negative_error_msg">La valeur de l\'âge ne peut être négative</string>
    <string name="sexe_choose_error">Veiller indiquer le sexe</string>
</resources>
