<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/nameTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/nameTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/surname"
        android:id="@+id/surnameTextView"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/nameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/surnameEditText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/ageTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/age"
        android:id="@+id/ageTextView"
        android:layout_below="@+id/surnameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_alignRight="@+id/sexTextView"
        android:layout_alignEnd="@+id/sexTextView" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ageEditText"
        android:layout_alignBottom="@+id/ageTextView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignLeft="@+id/surnameEditText"
        android:layout_alignStart="@+id/surnameEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/years"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/ageEditText"
        android:layout_alignRight="@+id/surnameEditText"
        android:layout_alignEnd="@+id/surnameEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sex"
        android:id="@+id/sexTextView"
        android:layout_below="@+id/ageTextView"
        android:layout_alignRight="@+id/nameTextView"
        android:layout_alignEnd="@+id/nameTextView"
        android:layout_marginTop="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/sexRadioGroup"
        android:layout_alignBottom="@+id/sexTextView"
        android:layout_alignLeft="@+id/ageEditText"
        android:layout_alignStart="@+id/ageEditText">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/maleRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/femaleRadioButton"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/addButton"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/sexRadioGroup"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
